2013-05-14  Joseph Myers  <joseph@codesourcery.com>

	* math/libm-test.inc (struct test_f_i_data): New type.
	(RUN_TEST_LOOP_f_i): New macro.
	(RUN_TEST_LOOP_f_i_tg): Likewise.
	(fpclassify_test_data): New variable.
	(fpclassify_test): Run tests with RUN_TEST_LOOP_f_i_tg.
	(ilogb_test_data): New variable.
	(ilogb_test): Run tests with RUN_TEST_LOOP_f_i.

	* math/libm-test.inc (scalbln_test): Correct function name in END
	call.

	* math/libm-test.inc (struct test_f_f1_data): Add comment.
	(RUN_TEST_LOOP_fI_f1): New macro.
	(frexp_test_data): New variable.
	(frexp_test): Run tests with RUN_TEST_LOOP_fI_f1.

	* math/libm-test.inc (struct test_fF_f1_data): New type.
	(RUN_TEST_LOOP_fF_f1): New macro.
	(modf_test_data): New variable.
	(modf_test): Run tests with RUN_TEST_LOOP_fF_f1.

	* math/libm-test.inc (struct test_f_f1_data): New type.
	(RUN_TEST_LOOP_f_f1): New macro.
	(gamma_test_data): New variable.
	(gamma_test): Run tests with RUN_TEST_LOOP_f_f1.
	(lgamma_test_data): New variable.
	(lgamma_test): Run tests with RUN_TEST_LOOP_f_f1.

2013-05-13  Carlos O'Donell  <carlos@redhat.com>

	* elf/dl-hwcaps.c (_dl_important_hwcaps): Comment vDSO hwcap loading.
	* elf/ldconfig.c (is_hwcap_platform): Comment each hwcap check.
	(main): Comment "tls" pseudo-hwcap.

2013-05-13  Joseph Myers  <joseph@codesourcery.com>

	* math/libm-test.inc (struct test_fl_f_data): New type.
	(RUN_TEST_LOOP_fl_f): New variable.
	(scalbln_test_data): New variable.
	(scalbln_test): Run tests with RUN_TEST_LOOP_fl_f.

	* math/libm-test.inc (struct test_fi_f_data): New type.
	(RUN_TEST_LOOP_fi_f): New macro.
	(ldexp_test_data): New variable.
	(ldexp_test): Run tests with RUN_TEST_LOOP_fi_f.
	(scalbn_test_data): New variable.
	(scalbn_test): Run tests with RUN_TEST_LOOP_fi_f.

	* math/libm-test.inc (struct test_c_f_data): New type.
	(RUN_TEST_LOOP_c_f): New macro.
	(cabs_test_data): New variable.
	(cabs_test): Run tests with RUN_TEST_LOOP_c_f.
	(carg_test_data): New variable.