@@ -1,5 +1,10 @@
 2013-05-14  Joseph Myers  <joseph@codesourcery.com>
 
+	* setjmp/tst-setjmp-fp.c: New file.
+	* setjmp/Makefile (tests): Add tst-setjmp-fp.
+	(link-libm): New variable.
+	($(objpfx)tst-setjmp-fp): Depend on $(link-libm).
+
 	* math/libm-test.inc (struct test_f_i_data): New type.
 	(RUN_TEST_LOOP_f_i): New macro.
 	(RUN_TEST_LOOP_f_i_tg): Likewise.
